tests/tooling/fixtures/native/recovery/negative/negative_modulo_bool_operand.objc3
// Expected diagnostic code(s): O3S206.
module NegativeModuloBoolOperand;

fn main() -> i32 {
  let flag = true;
  let x = flag % 2;
  return x;
}